<resources>
    <string name="app_name">Rabbi Ovadia Yosef Calendar</string>
    <string name="locale">English</string>
    <string name="ok">OK</string>
    <string name="zipcode">Zipcode</string>
    <string name="title_location_permission">No location permission</string>
    <string name="text_location_permission">
        Ideally, this app needs location permissions in order to accurately calculate the zmanim.
        Therefore, it is better to allow the app to see your location. We do not use your location
        for any other purpose than to calculate the zmanim.\n\nHowever, if you still do not want to give location
        permissions, you can choose to search for your address or a zipcode and the app will find your location based on your approximate area.
        (Using a zip code is not recommended if you want accurate Zemanim. It is better to put in your address.)
    </string>
    <string name="setup_elevation">Setup Elevation</string>
    <string name="mishor_request">If you want to use Mishor (Sea Level) Sunrise/Sunset for your calculations
        of the zemanim, just press the button below:</string>
    <string name="mishor_sea_level">Mishor (Sea Level)</string>
    <string name="manual_button">If you want to specify the elevation level (in meters) yourself,
        press this button:</string>
    <string name="manual">Manual</string>
    <string name="geonames_request">If you want to get this information from GeoNames.com,
        press this button:</string>
    <string name="chaitables">ChaiTables</string>
    <string name="long_explanation">
        Rabbi Asher Darshan (who was on the team for the Ohr HaChaim calendar in Israel) told me that Rabbi Ovadia Yosef ZT\"L held that the actual sunrise/sunset that should be used for calculating zmanim is when sunrise/sunset is seen at the highest point in the city. However, Rabbi David Yosef Shlita writes that many have told him that Rabbi Ovadiah ZT\"L held to use Mishor (Sea Level) sunrise/sunset. Rabbi Leeor Dahan says that it makes sense to use elevation in cities that have hills, and to not use it when the city, E.G. New York, is close to sea level. You can use the buttons below to choose the appropriate settings that you want. (See Halacha Berura vol. 14, in Otzrot Yosef (Kuntrus Ki Ba Hashemesh), Siman 6, Perek 21 for an in depth discussion)
    </string>
    <string name="settings">Settings</string>
    <string name="helper_text">Welcome to the Rabbi Ovadia Yosef Calendar app (also known as Zemaneh Yosef), this app was made to help you find out the most accurate Zemanim of the day according to Rabbi Ovadiah Yosef ZT\"L for your own city! Please follow the "Get Started" process of the app to set it up and here are some things to keep in mind:

 \n\n1.) You should ideally choose your city and download the visible sunrise tables through the simple setup. This table contains the most accurate times for VISIBLE sunrise, and this is the algorithm that the Ohr HaChaim calendar uses in Israel as the Yalkut Yosef writes (Yalkut Yosef Tefila 1, page 48). However, these tables only go on for 2 years into the future and will need to be updated bi-yearly. If you do not want to use these tables, you can choose to skip the setup, and the app will instead use the regular NOAA algorithm for sunrise (without elevation included as it is similar enough).

 \n\n2.) There are a few different minhagim to choose from in the settings part of the app. Make sure to choose the correct ones for your city/kehila. For example, the default candle lighting time is set to 20 minutes before sunset, and the default end time for shabbat is set to 40 minutes after sunset. Please change these settings to your own customs if desired.

 \n\n3.) Lastly, the zmanim can be included with seconds, DO NOT RELY ON THESE SECONDS. The only zman that can be relied on to the second is the visible sunrise time based on chaitables.com. Otherwise, these zmanim are NOT accurate to the second! You should always round up or down a minute or two just in case.

 \n\nIn addition to all of this, there are features in place that will automatically tell you to update the elevation data or the visible sunrise tables. If you leave the city that you currently setup the app for, the app will prompt you to run the setup again. The reason for this feature is because elevation will change based on the city that you are located in and you will have to update it every time you change cities, however, this feature will only turn on if you use elevation. If you have any issues or concerns, send an email to: ElyahuJacobi@gmail.com
    </string>
    <string name="contact_header">Contact the developer</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="search_for_a_place">Search for a place</string>
    <string name="title_activity_settings">Settings</string>
    <string name="full_setup">Full Setup</string>
    <string name="minhagim">Minhagim</string>
    <string name="are_you_in_israel">Are you in Israel?</string>
    <string name="i_am_in_israel">I am in Israel</string>
    <string name="i_am_not_in_israel">I am not in Israel</string>
    <string name="quick_setup">Quick Setup</string>
    <string name="advanced_setup">Advanced Setup</string>
    <string name="restart">Restart</string>
    <string name="download">Download</string>
    <string name="setup_both_elevation_and_visible_sunrise">Setup both elevation and visible sunrise (advanced)</string>
    <string name="setup_elevation_only">Setup Elevation Only</string>
    <string name="setup_visible_sunrise_only">Setup Visible Sunrise Only</string>
    <string name="do_not_setup_either_uses_mishor_sea_level_sunrise_sunset_for_both_zmanim_and_sunrise">Do Not setup anything\n\n(Uses Mishor/Sea Level Sunrise and Sunset for both zmanim and Sunrise)</string>
    <string name="alternate_download_request">Press this button to download the visible sunrise table from the Chai Tables website:</string>
    <string name="intro">This "Visual Sunrise" setup will replace our listed sunrise times with their equivalent from the ChaiTables.com website &amp; "Bechorei Yosef" calendar in Israel. These times are more accurate for those who pray Shaḥarit by sunrise, and they\'re in use by the Ohr HaChaim calendar in Israel.\n\nAll you need to provide is your country and metro area (with it sometimes asking for a state too). Our table-downloader will first find the smallest radius of your town, and then download the tables for the next two years. For future years, the table will reuse information saved from this setup to load your data as seamlessly as possible.\n\nIf you want to specify more information (such as a custom radius size), you should instead use our "Advanced Setup" - this will allow you to specify your own ChaiTables link to scrape from. You could navigate the website in our app if you don\'t have a ChaiTables link.\n\nIt will then ask you if you want to setup elevation for the city the app is set to. Know that the elevation data changes for each and every city and you will need to set the elevation data of your city every time you change cities.</string>
    <string name="what_language_would_you_like_the_zmanim_to_be_in">What language would you like the zemanim to be in?</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="setup">Setup</string>
    <string name="molad_calculator">Molad Calculator</string>
    <string name="moon_background">moon background</string>
    <string name="note_times_are_just_for_reference_you_should_ask_a_rav_if_you_can_say_the_bracha_earlier_or_later">Disclaimer: Times are just for reference, you should ask a rav if you can say the bracha earlier or later.</string>
    <string name="latest_birchat_halevanah_15_days">Latest Birchat Halevanah (15 days)</string>
    <string name="shabbat_mode">Shabbat/Chag Mode</string>
    <string name="refresh">Refresh</string>
    <string name="or">OR</string>
    <string name="select_your_country">Select Country</string>
    <string name="select_your_state">Select State</string>
    <string name="select_your_metro_area">Select Metro area</string>
    <string name="chaitables_instructions">Please go to chaitables.com and create a table of the current year for the area you specified. Then copy the link/address of the table and enter it here:</string>
    <string name="go_to_the_website_in_the_app">Go to the website in the app</string>
    <string name="set_link">Set Link</string>
    <string name="table_link">Table link</string>
    <string name="skip">Skip</string>
    <string name="geonames">GeoNames</string>
    <string name="area_not_listed">Area not listed?</string>
    <string name="zmanim">Zemanim</string>
    <string name="zmanim_notifications_settings">Zemanim Notifications Settings</string>
    <string name="minutes_before_the_zman_for_notifications">Minutes before the zeman for notifications</string>
    <string name="show_zmanim_notifications_on_shabbat_yom_tov">Zemanim notifications on shabbat/yom tov?</string>
    <string name="notifications_on_shabbat_and_yom_tov">Notifications on Shabbat and Yom Tov?</string>
    <string name="alot_hashachar">Alot Hashachar</string>
    <string name="alot">Alot</string>
    <string name="talit_and_tefilin">Talit And Tefilin</string>
    <string name="hanetz">HaNetz</string>
    <string name="sof_zman_shma_mga">Sof Zeman Shema MGA</string>
    <string name="sof_zman_shma_gra">Sof Zeman Shema GRA</string>
    <string name="sof_zman_tefila">Sof Zeman Tefila</string>
    <string name="achilat_chametz">Achilat Chametz</string>
    <string name="biur_chametz">Biur Chametz</string>
    <string name="chatzot">Ḥatzot</string>
    <string name="mincha_gedola">Minḥa Gedola</string>
    <string name="mincha_ketana">Minḥa Ketana</string>
    <string name="plag_hamincha_halacha_berurah">Plag HaMinḥa Halacha Berurah</string>
    <string name="plag_hamincha_yalkut_yosef">Plag HaMinḥa Yalkut Yosef</string>
    <string name="candle_lighting">Candle Lighting</string>
    <string name="shkia">Sheqi\'a</string>
    <string name="tzeit_hacochavim">Tzet Hakokhavim</string>
    <string name="tzeit_hacochavim_l_chumra">Tzet Hakokhavim L\'Ḥumra</string>
    <string name="fast_ends">Fast Ends</string>
    <string name="fast_ends_stringent">Fast Ends (Stringent)</string>
    <string name="shabbat_ends">Shabbat Ends</string>
    <string name="rabbeinu_tam">Rabbenu Tam</string>
    <string name="chatzot_layla">Ḥatzot Layla</string>
    <string name="siddur">Siddur</string>
    <string name="shacharit">שחרית</string>
    <string name="mussaf">מוסף</string>
    <string name="mincha">מנחה</string>
    <string name="arvit">ערבית</string>
    <string name="short_app_name">זמני יוסף</string>
    <string name="selichot">סליחות</string>
    <string name="setup_visible_sunrise">Setup Visible Sunrise</string>
    <string name="birchat_hamazon">ברכת המזון</string>
    <string name="birchat_levana">ברכת הלבנה</string>
    <string name="kriatShema">ק״ש שעל המיטה</string>
    <string name="misc">Misc.</string>
    <string name="tikkun_chatzot">תיקון חצות</string>
    <string name="birchat_meyin_shalosh">ברכת מעין שלוש</string>
    <string name="limudim_hillulot">Limudim/Hillulot</string>
    <string name="havdala">הבדלה</string>
    <string name="hadlakat_neirot_chanuka">הדלקת נרות חנוכה</string>
    <string name="sefirat_haomer">ספירת העומר</string>
    <string name="tefilat_haderech">תפלת הדרך</string>
    <string name="seder_siyum_masechet">סדר סיום מסכת</string>
    <string name="yy_chaitables_quote" translatable="false">והנכון הוא ללכת אחר לוח אור החיים, או לוח ביכורי יוסף, וכדומה, המבוסס על הזריחה המוקדמת ביותר הנראית מעל אופק המזרחי האמיתי, מנקודה כלשהי בישוב, מידי יום ביומו, בסיוע מודל טופוגרפי ממוחשב של ארץ ישראל.</string>
    <string name="yy_chaitables_source" translatable="false">(ילקוט יוסף מהדורא תשפ״א סימן פ״ט סעיף ג)</string>
</resources>