<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="siddur_day_text"
        android:title="Sunday (Today)\n3 Tammuz, 5785"
        android:singleLineTitle="false"
        tools:targetApi="26" />

    <com.ej.rovadiahyosefcalendar.classes.DimmedPreference
        android:key="siddur_selichot"
        android:title="@string/selichot" />

    <Preference
        android:key="siddur_shacharit"
        android:title="@string/shacharit" />

    <Preference
        android:key="siddur_mussaf"
        android:title="@string/mussaf" />

    <Preference
        android:key="siddur_mincha"
        android:title="@string/mincha" />

    <PreferenceCategory
        android:key="siddur_night_text"
        android:title="Sunday (Today) (After Sunset)\n4 Tammuz, 5785"
        android:singleLineTitle="false"
        tools:targetApi="26" />

    <Preference
        android:key="siddur_arvit"
        android:title="@string/arvit" />

    <Preference
        android:key="siddur_sefirat_haomer"
        android:title="@string/sefirat_haomer" />

    <Preference
        android:key="siddur_hadlakat_neirot_chanuka"
        android:title="@string/hadlakat_neirot_chanuka" />

    <com.ej.rovadiahyosefcalendar.classes.DimmedPreference
        android:key="siddur_havdala"
        android:title="@string/havdala" />

    <Preference
        android:key="siddur_kriatShema"
        android:title="@string/kriatShema" />

    <com.ej.rovadiahyosefcalendar.classes.DimmedPreference
        android:key="siddur_tikkun_chatzot"
        android:title="@string/tikkun_chatzot" />

    <PreferenceCategory android:title="@string/misc" />

    <!-- For during the 3 weeks -->
    <com.ej.rovadiahyosefcalendar.classes.DimmedPreference
        android:key="siddur_tikkun_chatzot_3_weeks"
        android:title="@string/tikkun_chatzot" />

    <Preference
        android:key="siddur_birchat_hamazon"
        android:title="@string/birchat_hamazon" />

    <Preference
        android:key="siddur_birchat_meyin_shalosh"
        android:title="@string/birchat_meyin_shalosh" />

    <com.ej.rovadiahyosefcalendar.classes.DimmedPreference
        android:key="siddur_tefilat_haderech"
        android:title="@string/tefilat_haderech" />

    <Preference
        android:key="siddur_seder_siyum_masechet"
        android:title="@string/seder_siyum_masechet" />

    <Preference
        android:key="siddur_birchat_levana"
        android:title="@string/birchat_levana" />

    <Preference
        android:key="siddur_misc_prayer"
        android:title="פרשת המן"
        app:isPreferenceVisible="false"/>

</PreferenceScreen>