<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <group android:id="@+id/group_divider">
        <item
            android:id="@+id/fullSetup"
            android:title="@string/full_setup" />
        <item
            android:id="@+id/setupChooser"
            android:title="@string/setup" />
        <item
            android:id="@+id/enterZipcode"
            android:title="@string/enter_a_zipcode" />
    </group>

    <item
        android:id="@+id/shabbat_mode"
        android:title="@string/shabbat_mode"
        android:checkable="true" />
    <item
        android:id="@+id/molad"
        android:title="@string/molad_calculator" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/help"
        android:title="@string/help" />

</menu>