<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    tools:context=".activities.AdvancedSetupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:subtitle="@string/short_app_name"
            app:subtitleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/chaitables_instructions"
        android:padding="12dp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/tableLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/table_link"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"
        android:autofillHints="website" />

    <Button
        android:id="@+id/set_link_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@android:drawable/ic_menu_today"
        android:text="@string/set_link"
        android:background="@drawable/colorful_gradient_square"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        android:padding="16dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="20dp"
        android:text="@string/or" />

    <Button
        android:id="@+id/chaitables_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_the_website_in_the_app"
        android:drawableEnd="@drawable/ic_baseline_ad_units_24"
        android:background="@drawable/colorful_gradient_square"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightYellow"
        android:textColor="@color/black"
        android:text="@string/skip"
        android:textSize="18sp"
        android:padding="8dp"
        android:gravity="center"
        />

    </LinearLayout>
</LinearLayout>